--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,6 +27,7 @@ body{
   position: fixed;
   inset: 0;
   pointer-events: none;
+  z-index: -1;
   background: radial-gradient(
     circle,
     rgba(0,0,0,0) 40%,
